====== GnomeMeeting 0.92.1 ====== (tag 0_92_1)

2002-05-26  Damien Sandras  <dsandras@seconix.com>

	* src/misc.cpp: Fixed the signal for the incoming call popup.

	* src/endpoint.cpp: Display the logo at the end of calls if the 
	local user is not using preview, and had not transmitted video.
	
2002-05-25  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* configure.in: ALL_LINGUAS: added Vietnamese (vi) language

2002-05-25  Damien Sandras  <dsandras@seconix.com>

	* src/endpoint.cpp: Fixed the on_no_answer timeout so that
	it disconnects the call if there is no answer after 25 seconds.
	Make use of the new function (see misc.cpp).

	* src/gnomemeeting.cpp: Code cleanups.

	* src/misc.cpp: Added a new function that builds the incoming call
	popup.

	* src/misc.h: Added a new function that builds the incoming call
	popup.

	* src/pref_window.cpp: Section title are now in bold.

	
2002-05-25  Duarte Loreto <happyguy_pt@hotmail.com>

        * configure.in: Added Portuguese (pt) to ALL_LINGUAS

2002-05-24  Andras Timar  <timar@gnome.hu>

	* configure.in: Added hu to ALL_LINGUAS.
	
2002-05-24  Damien Sandras  <dsandras@seconix.com>

	* gnomemeeting.schema.in.in: Deleted unused key.
	
2002-05-22  Damien Sandras  <dsandras@seconix.com>

	* src/endpoint.cpp: Small Quicknet fix.

	* src/pref_window.cpp: Changed prefs order to place codecs before
	devices.
	
2002-05-21  Damien Sandras  <dsandras@seconix.com>

	* src/endpoint.cpp: Fixed Small bug in OpenAudioChannel.
	
2002-05-21  Damien Sandras  <dsandras@seconix.com>

	* src/endpoint.cpp: Added protection again.
	
2002-05-21  Damien Sandras  <dsandras@seconix.com>

	* src/endpoint.cpp: Fixed possible bug in Fast Start mode. Do not
	add software capabilities if Quicknet is used (buggy here, so...)

	* src/gnomemeeting.cpp: Timer.

2002-05-21  Christian Rose  <menthos@menthos.com>

	* gnomemeeting.schemas.in.in, src/pref_window.cpp: Style fixes
	in messages.

2002-05-21  Kenneth Rohde Christiansen  <kenneth@gnu.org>
