@@ -1,3 +1,14 @@
+2002-05-28  Damien Sandras  <dsandras@seconix.com>
+
+	* src/endpoint.cpp: Fixed small bug, the ringing sound is not played
+	if the Auto Answer or the Do Not Disturb mode are sets. Completed 
+	Quicknet support : works now in Fast Start and Tunneling or now,
+	Busy tone is played when the remote disconnects, the phone stops ringing
+	if the remote stops calling, various small other fixes.
+
+	* src/gnomemeeting.cpp: Made Connect and Disconnect thread safe, so that
+	they can be called in all circumstances even by the IXJ thread.
+
 ====== GnomeMeeting 0.92.1 ====== (tag 0_92_1)
 
 2002-05-26  Damien Sandras  <dsandras@seconix.com>
